--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<html lang="en">
+
+<head>
+  <title>{{title}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+
+  <!-- Bootstrap & jQuery Scripts -->
+  <script src="/javascripts/bootstrap.min.js" defer></script>
+  <script src="/javascripts/jquery.min.js" defer></script>
+</head>
+
+<body>
+  <!-- Global Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Father</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mother</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Brother</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="/friends" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Friends
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/friends/bestfriend">Bestfriend</a>
+            <a class="dropdown-item" href="/friends/boyfriend">Boyfriend</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <main>
     {{{body}}}
-  </body>
+  </main>
+</body>
+
 </html>
