--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,14 +27,25 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Father</a>
+          <a class="nav-link" href="/goals">Goals</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Mother</a>
+          <a class="nav-link" href="/about">About Me</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Brother</a>
+        
+        <!-- dropdown menu 1 /Family Members -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="/members" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Members
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/members/father">Father</a>
+            <a class="dropdown-item" href="/members/mother">Mother</a>
+            <a class="dropdown-item" href="/members/brother">Brother</a>
+          </div>
         </li>
+        <!-- dropdown menu 2 / Friends -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="/friends" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
