--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,10 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container p-3 bg-translucent ">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur obcaecati veritatis non! Beatae eos amet</p>
+  <hr class="my-4">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, vero atque neque dolore tenetur repudiandae veritatis</p>
+  <p class="lead">
+    <a class="text-dark" href="/about" role="button">About Me</a>
+    <a class="text-dark mx-4" href="/goals" role="button">Goals & Interest</a>
+  </p>
+</div>
