--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
 
 <body>
   <!-- Global Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
+  <nav class="navbar navbar-expand-lg navbar p-4">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/goals">Goals</a>
+          <a class="nav-link" href="/about">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About Me</a>
+          <a class="nav-link" href="/goals">Goals</a>
         </li>
         
         <!-- dropdown menu 1 /Family Members -->
