added working routes to members

--- a/views/members/index.hbs
+++ b/views/members/index.hbs
@@ -7,9 +7,9 @@
         <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="/father" class="text-dark lead">Go somewhere</a>
+                    <h5 class="card-title">Father</h5>
+                    <p class="card-text"> incidunt pariatur, possimus maiores et inventore? Non, velit dolorum.</p>
+                    <a href="members/father" class="text-dark lead">Go somewhere</a>
                 </div>
             </div>
         </div>
@@ -17,9 +17,9 @@
         <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="/mother" class="text-dark lead">Go somewhere</a>
+                    <h5 class="card-title">Mother</h5>
+                    <p class="card-text"> incidunt pariatur, possimus maiores et inventore? Non, velit dolorum.</p>
+                    <a href="members/mother" class="text-dark lead">Go somewhere</a>
                 </div>
             </div>
         </div>
@@ -27,9 +27,9 @@
         <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="/brother" class="text-dark lead">Go somewhere</a>
+                    <h5 class="card-title">Brother</h5>
+                    <p class="card-text"> incidunt pariatur, possimus maiores et inventore? Non, velit dolorum.</p>
+                    <a href="members/brother" class="text-dark lead">Go somewhere</a>
                 </div>
             </div>
         </div>
