--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,13 @@
 <div class="container p-3 bg-translucent ">
   <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur obcaecati veritatis non! Beatae eos amet</p>
+  <p class="lead">Sunflower - bright, warm & optimistic.</p>
   <hr class="my-4">
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, vero atque neque dolore tenetur repudiandae veritatis</p>
   <p class="lead">
+    Experience the radiance of those close to me through Sunflower,where you'll find information about myself, my family, and friends who are like sunflowers shining bright in my life.
+    <br><br>
     <a class="text-dark" href="/about" role="button">About Me</a>
     <a class="text-dark mx-4" href="/goals" role="button">Goals & Interest</a>
+    <a class="text-dark mx-4" href="/members" role="button">Family</a>
+    <a class="text-dark mx-4" href="/friends" role="button">Friends</a>
   </p>
 </div>
