--- a/views/members/index.hbs
+++ b/views/members/index.hbs
@@ -1,15 +1,14 @@
 <div class="container p-3">
     <h1 class="display-4">Meet my Family!</h1>
-    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur obcaecati veritatis
-        non! Beatae eos amet</p>
+    <p class="lead">I come from a nuclear family, which consists of my parents and siblings. It is a close-knit group that provides love, care, and security, making it a cornerstone of our lives.</p>
     <hr class="my-4">
     <div class="row">
         <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Father</h5>
-                    <p class="card-text"> incidunt pariatur, possimus maiores et inventore? Non, velit dolorum.</p>
-                    <a href="members/father" class="text-dark lead">Go somewhere</a>
+                    <p class="card-text"> My father, a buisnessman,my lifeline, always there for me through thick and thin. His unwavering support and guidance has shaped me into who I am today.</p>
+                    <a href="members/father" class="text-dark lead">Know More</a>
                 </div>
             </div>
         </div>
@@ -18,8 +17,8 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Mother</h5>
-                    <p class="card-text"> incidunt pariatur, possimus maiores et inventore? Non, velit dolorum.</p>
-                    <a href="members/mother" class="text-dark lead">Go somewhere</a>
+                    <p class="card-text"> My mother is my rock, always providing emotional support and love. She is a kind-hearted and nurturing person, who has always put her family first.</p>
+                    <a href="members/mother" class="text-dark lead">Know More</a>
                 </div>
             </div>
         </div>
@@ -28,8 +27,8 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Brother</h5>
-                    <p class="card-text"> incidunt pariatur, possimus maiores et inventore? Non, velit dolorum.</p>
-                    <a href="members/brother" class="text-dark lead">Go somewhere</a>
+                    <p class="card-text"> He is in his last year of high school studying IT & web applications and is quite mischievous, just like me. We share a strong bond of love, care and laughter.</p>
+                    <a href="members/brother" class="text-dark lead">Know More</a>
                 </div>
             </div>
         </div>
