--- a/views/members/mother.hbs
+++ b/views/members/mother.hbs
@@ -1,5 +1,15 @@
-<div class="container p-3">
+<div class="container p-3 bg-translucent">
     <h1 class="display-4">Meet my Mother</h1>
-    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur obcaecati veritatis
-        non! Beatae eos amet</p>
 </div>
+<div class="container my-4">
+    <div class="row">
+        <div class="col-lg-6">
+            <img class="w-100" src="/images/mother.jpg" />
+        </div>
+        <div class="col-lg-6">
+            <div class="p-5 mt-4">
+                <h1 class="display-4">Kiran</h1>
+                <p class="lead">Meet my mother, a talented and compassionate woman who wears many hats. As a numerologist and reiki healer, she brings comfort and healing to those around her. And as a mother, she is my emotional rock, always there for me in my toughest times. Her words of wisdom and love will stay with me forever, especially the memory of her saying that the day I was born was the happiest she's ever been. Despite being away from her for over a year now, her love and support continue to be felt from afar. </p>
+            </div>
+        </div>
+    </div>
