--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,61 +7,47 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
   <link rel="stylesheet" href="/stylesheets/style.css" />
-
-  <!-- Bootstrap & jQuery Scripts -->
-  <script src="/javascripts/bootstrap.min.js" defer></script>
-  <script src="/javascripts/jquery.min.js" defer></script>
+  
 </head>
 
 <body>
   <!-- Global Navbar -->
-  <nav class="navbar navbar-expand-lg navbar p-4">
-    <a class="navbar-brand" href="#">Navbar</a>
+  <nav class="navbar navbar-expand-lg navbar p-2 ">
+    <a class="navbar-brand" href="/"><img src="/images/logo.png"  class="logo"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="dropdown">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/">Home |</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About Me</a>
+          <a class="nav-link" href="/about">About |</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/goals">Goals</a>
+          <a class="nav-link" href="/goals">Goals |</a>
         </li>
-        
-        <!-- dropdown menu 1 /Family Members -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/members" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Members
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/members/father">Father</a>
-            <a class="dropdown-item" href="/members/mother">Mother</a>
-            <a class="dropdown-item" href="/members/brother">Brother</a>
-          </div>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/members">Family |</a>
         </li>
-        <!-- dropdown menu 2 / Friends -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/friends" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Friends
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/friends/bestfriend">Bestfriend</a>
-            <a class="dropdown-item" href="/friends/boyfriend">Boyfriend</a>
-          </div>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/friends">Friends</a>
         </li>
-      </ul>
+        </ul>
     </div>
   </nav>
+        
+      
+      
   <main>
     {{{body}}}
   </main>
 </body>
-
+<!-- Bootstrap & jQuery Scripts -->
+  <script src="/javascripts/bootstrap.min.js" defer></script>
+  <script src="/javascripts/jquery.min.js" defer></script>
 </html>
