--- a/views/members/brother.hbs
+++ b/views/members/brother.hbs
@@ -1,5 +1,15 @@
-<div class="container p-3">
+<div class="container p-3 bg-translucent">
     <h1 class="display-4">Meet my Brother</h1>
-    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur obcaecati veritatis
-        non! Beatae eos amet</p>
 </div>
+<div class="container my-4">
+    <div class="row">
+        <div class="col-lg-6">
+            <img class="w-100" src="/images/brother.jpg" />
+        </div>
+        <div class="col-lg-6">
+            <div class="p-5 mt-4">
+                <h1 class="display-4">Deepankar</h1>
+                <p class="lead">Meet my younger brother, a bundle of energy and creativity. He's about to turn 18, but to me, he'll always be my little brother. Despite being a tech-savvy high school student, studying IT and web application, he's still got a mischievous streak that keeps me on my toes. Together, we laugh, fight, and care for each other, just like any siblings do. </p>
+            </div>
+        </div>
+    </div>
