--- a/views/members/father.hbs
+++ b/views/members/father.hbs
@@ -1,5 +1,15 @@
-<div class="container p-3">
+<div class="container p-3 bg-translucent">
     <h1 class="display-4">Meet my Father</h1>
-    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur aspernatur obcaecati veritatis
-        non! Beatae eos amet</p>
 </div>
+<div class="container my-4">
+    <div class="row">
+        <div class="col-lg-6">
+            <img class="w-100" src="/images/father.jpg" />
+        </div>
+        <div class="col-lg-6 bg-yellow">
+            <div class="p-5 mt-4">
+                <h1 class="display-4">Satish Kaushik</h1>
+                <p class="lead">Meet my papa, the cornerstone of my life. He is a loving and strict guardian, who is always there for me in times of need. He is open-minded and protective, and always puts my well-being first. Despite his busy schedule as a successful businessman in Chandigarh, the "City Beautiful," he always finds time to show his love for me. He is my lifeline, and I cherish our bond deeply. </p>
+            </div>
+        </div>
+    </div>
