--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,13 +7,13 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
   <link rel="stylesheet" href="/stylesheets/style.css" />
-  
+
 </head>
 
 <body>
   <!-- Global Navbar -->
   <nav class="navbar navbar-expand-lg navbar p-2 ">
-    <a class="navbar-brand" href="/"><img src="/images/logo.png"  class="logo"/></a>
+    <a class="navbar-brand" href="/"><img src="/images/logo.png" class="logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="dropdown">
       <span class="navbar-toggler-icon"></span>
@@ -37,17 +37,28 @@
         <li class="nav-item">
           <a class="nav-link" href="/friends">Friends</a>
         </li>
-        </ul>
+      </ul>
     </div>
   </nav>
-        
-      
-      
+
+
+
   <main>
     {{{body}}}
   </main>
 </body>
+<footer class="container-fluid p-2 fixed-bottom">
+  
+    <hr />
+    <p class="lead">
+      &copy; Sunflower Web 2023 | Made by: Yashsvi |
+    <a class="text-dark" href="https://github.com/alisha-dutt/">GitHub  </a>   &nbsp; | &nbsp;
+     <a class="text-dark" href="https://www.linkedin.com/in/yashsvi-yashsvi/"> LinkedIn </a>
+    </p>
+  
+</footer>
 <!-- Bootstrap & jQuery Scripts -->
-  <script src="/javascripts/bootstrap.min.js" defer></script>
-  <script src="/javascripts/jquery.min.js" defer></script>
+<script src="/javascripts/bootstrap.min.js" defer></script>
+<script src="/javascripts/jquery.min.js" defer></script>
+
 </html>
