--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -47,10 +47,8 @@
     {{{body}}}
   </main>
 </body>
-<footer class="container-fluid p-2 fixed-bottom">
-  
-    <hr />
-    <p class="lead">
+<footer class="container-fluid pt-2 fixed-bottom bg-translucent">
+      <p class="lead">
       &copy; Sunflower Web 2023 | Made by: Yashsvi |
     <a class="text-dark" href="https://github.com/alisha-dutt/">GitHub  </a>   &nbsp; | &nbsp;
      <a class="text-dark" href="https://www.linkedin.com/in/yashsvi-yashsvi/"> LinkedIn </a>
