--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -6,9 +6,9 @@
         <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Bestfriend</h5>
+                    <h5 class="card-title">Bestfriend (Male)</h5>
                     <p class="card-text">My friend is someone who has been with me through thick and thin, always supporting & encouraging.  </p>
-                    <a href="friends/bestfriend" class="text-dark lead">Know More</a>
+                    <a href="friends/bestfriend1" class="text-dark lead">Know More</a>
                 </div>
             </div>
         </div>
@@ -16,9 +16,9 @@
         <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Boyfriend</h5>
-                    <p class="card-text">My boyfriend, on the other hand, is the person who brings love and happiness into my life every day. </p>
-                    <a href="friends/boyfriend" class="text-dark lead">Know More</a>
+                    <h5 class="card-title">Bestfriend(Female)</h5>
+                    <p class="card-text">My gal pal, on the other hand, is the person who brings joy and happiness into my life every day. </p>
+                    <a href="friends/bestfriend2" class="text-dark lead">Know More</a>
                 </div>
             </div>
         </div>
