--- a/views/friends/bestfriendfemale.hbs
+++ b/views/friends/bestfriendfemale.hbs
@@ -4,7 +4,7 @@
 <div class="container my-4">
     <div class="row">
         <div class="col-lg-6">
-            <img class="w-100" src="/images/deepika.jpg" />
+            <img class="w-100" src="/images/deepika.jpeg" />
         </div>
         <div class="col-lg-6">
             <div class="p-5 mt-4">
