--- a/views/friends/bestfriendfemale.hbs
+++ b/views/friends/bestfriendfemale.hbs
@@ -1,5 +1,5 @@
 <div class="container p-3 bg-translucent">
-    <h1 class="display-4">Meet my Boyfriend</h1>
+    <h1 class="display-4">Meet my Bestfriend</h1>
 </div>
 <div class="container my-4">
     <div class="row">
