--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -3,20 +3,10 @@
     <p class="lead">Apart from my family, two of the most important people in my life are my friend and boyfriend.</p>
     <hr class="my-4">
     <div class="row">
-        <div class="col-3 ">
+              <div class="col-3 ">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Bestfriend (Male)</h5>
-                    <p class="card-text">My friend is someone who has been with me through thick and thin, always supporting & encouraging.  </p>
-                    <a href="friends/bestfriendmale" class="text-dark lead">Know More</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-3 ">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Bestfriend(Female)</h5>
+                    <h5 class="card-title">Bestfriend</h5>
                     <p class="card-text">My gal pal, on the other hand, is the person who brings joy and happiness into my life every day. </p>
                     <a href="friends/bestfriendfemale" class="text-dark lead">Know More</a>
                 </div>
